sass/components/_mobile-menu.scss
.m-menu__overlay {
    position: fixed;
    z-index: 3;
    width: 100%;
    height: 100%;
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
    transform: translateX(100%);
    transition: transform $cubic-bezier, opacity $cubic-bezier,
        visibility $cubic-bezier;
    background-color: #fff;
}

.m-menu-btn {
    background: none;
    border: none;
    box-shadow: none;
}

.m-menu-btn__icon {
    transition: fill $cubic-bezier;
}

.m-menu-btn__icon:hover,
.m-menu-btn__icon:focus {
    fill: $main-color;
}

.m-menu__overlay.is-open {
    transform: translateX(0);
    opacity: 1;
    pointer-events: initial;
    visibility: visible;
}

.m-menu {
    display: flex;
    flex-direction: column;
    padding: 48px 40px;
    width: 100%;
    height: 100%;
    position: relative;
    color: $black-title;
    opacity: 1;
    background-color: #fff;
    z-index: 998;
}

.m-menu__list-nav {
    padding: 0;
    list-style-type: none;
    margin-bottom: 302px;
}

.m-menu__btn-close {
    position: absolute;
    background-color: #fff;
    border: none;
    right: 25px;
    top: 21px;
    cursor: pointer;
    transition: fill $cubic-bezier;

    &:hover,
    &:focus {
        fill: $main-color;
    }
}

.m-menu__link-nav {
    font-weight: 500;
    font-size: 40px;
    line-height: calc(47 / 40);
    letter-spacing: 0.02em;
    color: $black-title;
    list-style-type: none;
    text-decoration: none;
}

.m-menu__link-nav--active {
    color: $main-color;
}

.m-menu__item-nav:not(:last-child) {
    padding-bottom: 32px;
}

.m-menu__list-contact {
    list-style-type: none;
    padding: 0;
}

.m-menu__link-contact-tel {
    padding-bottom: 32px;
    font-weight: 500;
    font-size: 34px;
    line-height: calc(40 / 34);
    letter-spacing: 0.02em;
    color: $main-color;
    text-decoration: none;
}

.m-menu__list-contact-tel {
    margin-bottom: 32px;
}

.m-menu__link-contact-mailto {
    font-weight: 500;
    font-size: 24px;
    line-height: calc(28 / 24);
    letter-spacing: 0.02em;
    color: $secondary-color;
    text-decoration: none;
}

.m-menu__list-contact-mailto {
    margin-bottom: 64px;
}

.m-menu__list-social {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    list-style-type: none;
    padding: 0;
}

.m-menu__link-social {
    font-weight: 500;
    font-size: 18px;
    line-height: calc(22 / 18);
    letter-spacing: 0.02em;
    color: $main-color;
    text-decoration: none;
}

.m-menu__item-social:not(:last-child) .m-menu__link-social {
    display: flex;
    padding-right: 10px;
    border-right: 1px solid rgba(33, 33, 33, 0.2);
}

@media screen and (min-width: 768px) {
    .m-menu {
        display: none;
    }
    
    .m-menu-btn {
        display: none;
    }
}

